# desafio_coodesh

./: .dockerignore  .env  .gitignore  Back-end Challenge 2021 - Space Flight News.postman_collection.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/db/: database.py
app/models/: articles.py
app/routers/: articles.py
