[tool.poetry]
name = "desafio_coodesh"
version = "0.1.0"
description = "Back-end challenges by Coodesh"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Ivan Noleto <ivannoleto@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
aiohttp = "^3.8.1"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.960"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
